# vor_x6x_solar_monitoring

./: CMakeLists.txt  README.md  package.xml
launch/: launch_example1.launch.py  solar_monitoring_launch.py
src/: solar_power_publisher.cpp  solar_power_subscriber.cpp
