<?xml version="1.0"?>
<package format="2">
  <name>vor_x6x_solar_monitoring</name>
  <version>0.0.0</version>
  <description>Solar power monitoring package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
